--- a/index-hacker.html
+++ b/index-hacker.html
@@ -166,108 +166,118 @@
         </div>
     </section>
 
-    <!-- Projects Section -->
-    <section id="projects" class="projects">
-        <div class="container">
-            <h2 class="section-title">PROJECTS_DATABASE</h2>
-            <div class="projects-grid">
-                <div class="project-card">
-                    <div class="project-content">
-                        <h3 class="project-title">AI_SCAM_DETECTION_PLATFORM</h3>
-                        <p class="project-description">
-                            <span style="color: #00cc33;">//</span> AI-driven scam detection platform developed during SAP Hackfest 2025. Uses NLP and ML algorithms 
-                            to identify fraudulent activity with 92% accuracy. Successfully detected 10,000+ scam attempts during testing.
-                        </p>
-                        <div class="project-tech">
-                            <span class="tech-tag">Python</span>
-                            <span class="tech-tag">TensorFlow</span>
-                            <span class="tech-tag">NLP</span>
-                            <span class="tech-tag">Machine Learning</span>
-                        </div>
-                    </div>
-                </div>
+  <!-- Projects Section -->
+<section id="projects" class="projects">
+    <div class="container">
+        <h2 class="section-title">PROJECTS_DATABASE</h2>
+        <div class="projects-grid">
 
-                <div class="project-card">
-                    <div class="project-content">
-                        <h3 class="project-title">COVID19_FORECASTING</h3>
-                        <p class="project-description">
-                            <span style="color: #00cc33;">//</span> Analyzed data from 200+ countries, built time-series forecasting models with ARIMA and SARIMA 
-                            to predict infection rates. Achieved 85% prediction accuracy for 6 months ahead.
-                        </p>
-                        <div class="project-tech">
-                            <span class="tech-tag">Python</span>
-                            <span class="tech-tag">ARIMA</span>
-                            <span class="tech-tag">SARIMA</span>
-                            <span class="tech-tag">Power BI</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-content">
-                        <h3 class="project-title">CUSTOMER_SEGMENTATION</h3>
-                        <p class="project-description">
-                            <span style="color: #00cc33;">//</span> Implemented k-means clustering to segment customers based on purchasing behaviour and demographics. 
-                            Conducted feature scaling and dimensionality reduction using PCA to optimize clustering results.
-                        </p>
-                        <div class="project-tech">
-                            <span class="tech-tag">Python</span>
-                            <span class="tech-tag">Scikit-learn</span>
-                            <span class="tech-tag">K-Means</span>
-                            <span class="tech-tag">PCA</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-content">
-                        <h3 class="project-title">SALES_FORECASTING_ML</h3>
-                        <p class="project-description">
-                            <span style="color: #00cc33;">//</span> Built sales prediction model using historical data, leveraging regression techniques like Linear 
-                            Regression and Random Forest. Cleaned and preprocessed data, engineered features for accuracy.
-                        </p>
-                        <div class="project-tech">
-                            <span class="tech-tag">Python</span>
-                            <span class="tech-tag">Scikit-learn</span>
-                            <span class="tech-tag">Random Forest</span>
-                            <span class="tech-tag">Matplotlib</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-content">
-                        <h3 class="project-title">STOCK_PRICE_PREDICTION</h3>
-                        <p class="project-description">
-                            <span style="color: #00cc33;">//</span> Built stock price prediction model using historical data of 100+ companies, utilizing Random Forest 
-                            and LSTM. Achieved 82% accuracy in stock price movement direction over 30-day period.
-                        </p>
-                        <div class="project-tech">
-                            <span class="tech-tag">Python</span>
-                            <span class="tech-tag">LSTM</span>
-                            <span class="tech-tag">Random Forest</span>
-                            <span class="tech-tag">Deep Learning</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-content">
-                        <h3 class="project-title">NETWORKING_MNC_SIMULATION</h3>
-                        <p class="project-description">
-                            <span style="color: #00cc33;">//</span> Simulated network infrastructure for MNCs using Cisco Packet Tracer, enhancing networking 
-                            knowledge and Cisco tools proficiency for enterprise-level network management.
-                        </p>
-                        <div class="project-tech">
-                            <span class="tech-tag">Cisco Packet Tracer</span>
-                            <span class="tech-tag">Networking</span>
-                            <span class="tech-tag">Infrastructure</span>
-                        </div>
+            <!-- AI-Based Medical Image Classifier -->
+            <div class="project-card">
+                <div class="project-content">
+                    <h3 class="project-title">AI-Based Medical Image Classifier</h3>
+                    <p class="project-description">
+                        <span style="color: #00cc33;">//</span> Built a deep learning model using ResNet50 to classify rare skin diseases from dermatoscopic images.
+                        Achieved 93% accuracy to support rural diagnosis where dermatologists are limited.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">TensorFlow</span>
+                        <span class="tech-tag">CNN</span>
+                        <span class="tech-tag">Transfer Learning</span>
                     </div>
                 </div>
             </div>
+
+            <!-- AI Interview Coach -->
+            <div class="project-card">
+                <div class="project-content">
+                    <h3 class="project-title">AI-Generated Interview Coach</h3>
+                    <p class="project-description">
+                        <span style="color: #00cc33;">//</span> Built a real-time AI interviewer that evaluates spoken responses using NLP and tone analysis.
+                        Delivered feedback that improved user confidence and communication by 70%.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">Speech Recognition</span>
+                        <span class="tech-tag">NLP</span>
+                        <span class="tech-tag">Transformers</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Cyber Fraud Detection Engine -->
+            <div class="project-card">
+                <div class="project-content">
+                    <h3 class="project-title">Cyber Fraud Detection Engine</h3>
+                    <p class="project-description">
+                        <span style="color: #00cc33;">//</span> Built AI system for detecting online fraud using clickstream and behavioral analytics.
+                        Integrated SHAP for explainability and reduced fraud by 35% in simulations.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">XGBoost</span>
+                        <span class="tech-tag">SHAP</span>
+                        <span class="tech-tag">Cybersecurity</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- ESG Sentiment Analytics -->
+            <div class="project-card">
+                <div class="project-content">
+                    <h3 class="project-title">ESG Sentiment Analytics</h3>
+                    <p class="project-description">
+                        <span style="color: #00cc33;">//</span> Analyzed ESG sentiment from media and reports to predict stock volatility.
+                        Enhanced risk-adjusted returns by 11% in sustainable portfolios.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">NLP</span>
+                        <span class="tech-tag">Finance</span>
+                        <span class="tech-tag">Power BI</span>
+                        <span class="tech-tag">Sentiment Analysis</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Retail Heatmap Optimization -->
+            <div class="project-card">
+                <div class="project-content">
+                    <h3 class="project-title">Retail Heatmap Optimization with IoT</h3>
+                    <p class="project-description">
+                        <span style="color: #00cc33;">//</span> Used IoT sensor data to track in-store footfall and redesigned layout.
+                        Boosted customer dwell time by 22% using real-time dashboards.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">IoT</span>
+                        <span class="tech-tag">SQL</span>
+                        <span class="tech-tag">Tableau</span>
+                        <span class="tech-tag">Geospatial</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Smart City Traffic Dashboard -->
+            <div class="project-card">
+                <div class="project-content">
+                    <h3 class="project-title">Smart City Traffic Congestion Dashboard</h3>
+                    <p class="project-description">
+                        <span style="color: #00cc33;">//</span> Combined GPS, sensor, and civic data to create a real-time traffic dashboard.
+                        Reduced congestion by 30% via clustering and simulation-based optimization.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">Time Series</span>
+                        <span class="tech-tag">GIS</span>
+                        <span class="tech-tag">Clustering</span>
+                    </div>
+                </div>
+            </div>
+
         </div>
-    </section>
+    </div>
+</section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
