--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abhijeet Srivastava - Cyber Terminal</title>
-    <link rel="stylesheet" href="styles-hacker.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -327,7 +327,7 @@
         </div>
     </footer>
 
-    <script src="script-hacker.js"></script>
+    <script src="index.js"></script>
     <script>
         // Loading screen effect
         window.addEventListener('load', function() {
