--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="hero-image">
                     <div class="profile-photo">
-                        <img src="profile-photo.jpg" alt="Abhijeet Srivastava" id="profile-photo" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <img src="Profile picture.jpeg" alt="Abhijeet Srivastava" id="profile-photo" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                         <div class="profile-photo-placeholder" style="display: none;">
                             <div>
                                 <i class="fas fa-user-secret" style="font-size: 48px; margin-bottom: 10px;"></i><br>
